<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="ExtraTranslation">
    <string name="app_name">Five Star Mind</string>
    <string name="five_star_mind">five_star_mind</string>
    <string name="check_your_network_connection">Please check your internet connection. Make sure it is working properly.</string>
    <string name="view_all">View All</string>
    <string name="no_data_found">No data found</string>
    <string name="please_wait">Please wait…</string>
    <string name="img_desc">Image Description</string>
    <string name="are_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="send_msg">We will send text message with password</string>
    <string name="no_journals_available">No journals available</string>
    <string name="no_transactions_available">No transactions available</string>
    <string name="blank_string">""</string>
    <string name="error_occurred">Error occurred</string>
    <string name="empty_list">Empty list</string>
    <string name="unable_to_process_video">Unable to process this video. Please try again.</string>
    <string name="please_select_image_resource">Please select image source</string>
    <string name="length_of_phone_number">Phone number must be 10 characters</string>
    <string name="one_step_in_your_journey">One step in your Journey Remember.</string>
    <string name="upload_photo_or_video">Upload Photo or Video</string>
    <string name="please_upload_your_image">Please upload your Image</string>
    <string name="please_enter_valid_pass">Please enter valid password</string>
    <string name="please_enter_valid_card_number">Please enter valid card number</string>
    <string name="pass_is_too_long">Password is too long</string>
    <string name="empty_cart_holder">Please enter name of Card Holder</string>
    <string name="empty_cart_number">Please enter card number</string>
    <string name="empty_expiry_date">Please enter expiry date</string>
    <string name="empty_cvv_no">Please enter cvv number</string>
    <string name="validate_cvv">Please enter valid cvv code</string>
    <string name="empty_cart_msg">Your Cart List is Empty</string>
    <string name="empty_coupon_msg">Please enter coupon code</string>
    <string name="no_memberships_msg">No Memberships Available</string>
    <string name="pls_select_membership">Please select membership</string>
    <string name="pls_wait_video_is_uploading">Please wait while video is uploading</string>
    <string name="access_permission_msg">These Permissions are necessary for App</string>
    <string name="pass_is_match_with_old">Old Password and New Password should not be same</string>
    <string name="confirm_pass_is_not_match_with_new">The confirm password should be same as new password</string>
    <string name="accept_terms_conditions">Please Accept Terms &amp; Conditions</string>
    <string name="mastered_description">Do you feel like you have mastered this</string>
    <string name="team_membership_desc">How many members do you have in your team?</string>
    <string name="you_have_canceled_your_subscription_for_auto_renewal">You have canceled your subscription for auto-renewal.</string>
    <string name="your_current_membership_has_not_expired_yet">Your current membership has not expired yet.</string>
    <string name="please_purchase_product_to_watch_video">Please purchase this product to watch video.</string>
    <string name="please_upgrade_membership_to_watch_this_video">Please upgrade your membership to watch this video.</string>
    <string name="you_now_have_access_to_all_videos">Congratulations! You now have access to all videos.</string>
    <string name="are_you_sure_you_want_to_remove_from_bookmark">Are you sure you want to remove from bookmark.</string>
    <string name="are_you_sure_you_want_to_add_bookmark">Are you sure you want to add bookmark.</string>
    <string name="sesstion_expired">Your sesstion is expired.</string>
    <string name="hint_email">jack55@gmail.com</string>
    <string name="hint_pass">*********</string>
    <string name="hint_number">+1 222 555 6666</string>
    <string name="hint_name">Jack</string>
    <string name="hint_cvv">***</string>
    <string name="hint_date_cart">08/2022</string>
    <string name="hint_cart_no">1223–1511–5666-5555</string>
    <string name="hint_full_name">Jack Smith</string>
    <string name="hint_promo_code">Enter Promo Code</string>
    <string name="hint_date">DD-MM-YYYY</string>
    <string name="hint_note">text&#8230;</string>
    <string name="hint_title">Text</string>
    <string name="hint_text">text…</string>
    <string name="hint_type_here">Type here...</string>
    <string name="hint_enter_training_days">Enter training days</string>
    <string name="hint_enter_focus">Enter focus</string>
    <string name="hint_enter_goal">Enter goal</string>
    <string name="hint_enter_hours_trained">Enter hours trained</string>
    <string name="hint_enter_highlights">Enter highlights</string>
    <string name="hint_enter_self_report">Enter self report</string>
    <string name="hint_enter_game_days">Enter game days</string>
    <string name="hint_enter_minutes_played">Enter minutes played</string>
    <string name="hint_college">CGC</string>
    <string name="hint_state">Texas</string>
    <string name="hint_referral_code">1536964</string>
    <string name="cancel">Cancel</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="choose_video">Choose Video</string>
    <string name="take_video">Take Video</string>
    <string name="take_photo">Take Photo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="mastered">Mastered</string>
    <string name="subscribe">Subscribe</string>
    <string name="buy">Buy</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="purchased">Purchased</string>
    <string name="view_cart">View Cart</string>
    <string name="upgrade">Upgrade</string>
    <string name="required">Required</string>
    <string name="invalid_format">Invalid</string>
    <string name="new_videos">New Videos</string>
    <string name="accept_conditions">Accept our&#160;</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="lets_go">Lets Go!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="my_account">My Account</string>
    <string name="programs">Programs</string>
    <string name="memberships">Memberships</string>
    <string name="faq">FAQ</string>
    <string name="suggestions">Suggestions</string>
    <string name="journal">Journal</string>
    <string name="evaluation">Evaluation</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="profile">My Profile</string>
    <string name="my_programs">My Programs</string>
    <string name="my_memberships">My Memberships</string>
    <string name="my_favorite">My Bookmark</string>
    <string name="transactions">Transactions</string>
    <string name="cart">Cart</string>
    <string name="add_journal">Add Journal</string>
    <string name="change_password">Change Password</string>
    <string name="settings">Settings</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="title_suggestion">Suggestions</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="date">Date:</string>
    <string name="note">Note</string>
    <string name="journal_pics_and_videos">Journal Pics and Videos</string>
    <string name="skill">Skill</string>
    <string name="tactical">Tactical</string>
    <string name="intensity">Intensity</string>
    <string name="status">Status:</string>
    <string name="payment_type">Payment Type:</string>
    <string name="my_program">My Programs</string>
    <string name="cart_detail">Card Detail</string>
    <string name="name_on_card">Name on card:</string>
    <string name="card_number">Card Number:</string>
    <string name="expiry_date">Expiry Date:</string>
    <string name="cvv_code">CVV Code:</string>
    <string name="invalid_coupon_code">Invalid coupon code.</string>
    <string name="apply">Apply</string>
    <string name="coupon">Coupon Applied</string>
    <string name="checkout">Check Out</string>
    <string name="payment">Payment Detail</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount Code:</string>
    <string name="total">Total</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="change_subscription">Change subscription</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="still_to_implement">Still to Implement</string>
    <string name="text_description">Description</string>
    <string name="title_text">Title:</string>
    <string name="title_subject">Subject</string>
    <string name="price">$20.0</string>
    <string name="phase_zero">Phase 0</string>
    <string name="with_phase">with_phase</string>
    <string name="without_phase">without_phase</string>
    <string name="type_pdf">pdf</string>
    <string name="type_video">video</string>
    <string name="detail">Details</string>
    <string name="movement">movement</string>
    <string name="image">image</string>
    <string name="individual">Individual</string>
    <string name="individual_subscription">Individual Subscription</string>
    <string name="team">Team</string>
    <string name="club">Club</string>
    <string name="desc_service">It is important for load app content </string>
    <string name="one_month">1 month</string>
    <string name="three_months">3 months</string>
    <string name="six_months">6 months</string>
    <string name="twelve_months">12 Months</string>
    <string name="five_codes">5 Codes</string>
    <string name="ten_codes">10 Codes</string>
    <string name="fifteen_codes">15 Codes</string>
    <string name="twenty_codes">20 Codes</string>
    <string name="hundred_codes">100 Codes</string>
    <string name="individual_">INDIVIDUAL</string>
    <string name="team_">TEAM</string>
    <string name="club_">CLUB</string>
    <string name="stripe">STRIPE</string>
    <string name="for_six_months">For 6 months</string>
    <string name="for_twelve_months">For 12 months</string>
    <string name="no_membership_yet">No Memberships Yet</string>
    <string name="self_report">Self Report</string>
    <string name="highlights">Highlights</string>
    <string name="hours_trained">Hours Trained</string>
    <string name="did_you_train_">Did You Train?</string>
    <string name="club_college_">Club/College:</string>
    <string name="state_">State:</string>
    <string name="referral_code">Referral Code (Optional)</string>
    <string name="create_account">Create Account</string>
</resources>